tests/fixtures/pass/coalesce_infer_result_err.sc
use core.Result

let main(): i32 = { Result(E: bool).Err(false) ?? 42 }
