tests/fixtures/fail/coalesce_result_rhs_mismatch.sc
use core.Result

let main(): i32 = { Result(i32, bool).Err(false) ?? true }
